# glaucoma_project

./: .gitattributes  .gitignore  API_INSTRUCTIONS.md  Dockerfile  GLAUCOMA_PROJECT_COMPREHENSIVE_REPORT.docx  IEEE_GLAUCOMA_DETECTION_TECHNICAL_REPORT.docx  README.md  SETUP_GUIDE.md  TRAINING_INSTRUCTIONS.md  fix_long_paths.bat  generate_comprehensive_report.py  generate_glaucoma_report.js  generate_ieee_report.py  pyproject.toml  reinstall_deps.bat  requirements-lock.txt  requirements.txt  run_api.bat  run_api.ps1  run_batch_preprocessing_tmp.py  run_training.bat  run_training.ps1  temp_test.py
.github/workflows/: ci.yml
notebooks/: 01_preprocessing.ipynb  02_segmentation.ipynb  03_cdr_calculation.ipynb  04_training.ipynb  05_evaluation.ipynb  06_final_output.ipynb  README_CONSOLIDATED.md  consolidate_notebooks.py  execute_notebook.py  glaucoma_project_consolidated.ipynb
outputs/models/: best_model.pth
src/: aggregate_results.py  api.py  cdr.py  config.py  dataset.py  error_handler.py  evaluate.py  inference.py  model.py  pdf_service.py  pipeline.py  predict.py  prediction_service.py  preprocessing.py  report_visualizer.py  segmentation.py  train.py  train_optimized.py
tests/: test_api_integration.py  test_suite.py
